@@ -54,6 +54,14 @@ int libgzipf_debug_print_posix_time_value(
      uint32_t string_format_flags,
      libcerror_error_t **error );
 
+int libgzipf_debug_print_string_value(
+     const char *function_name,
+     const char *value_name,
+     const uint8_t *byte_stream,
+     size_t byte_stream_size,
+     int ascii_codepage,
+     libcerror_error_t **error );
+
 int libgzipf_debug_print_read_offsets(
      libbfio_handle_t *file_io_handle,
      libcerror_error_t **error );
