@@ -29,6 +29,7 @@
 #include "libgzipf_libcerror.h"
 #include "libgzipf_libcnotify.h"
 #include "libgzipf_libfdatetime.h"
+#include "libgzipf_libuna.h"
 #include "libgzipf_member_header.h"
 
 #include "gzipf_member_header.h"
@@ -128,6 +129,16 @@ int libgzipf_member_header_free(
 	}
 	if( *member_header != NULL )
 	{
+		if( ( *member_header )->name != NULL )
+		{
+			memory_free(
+			 ( *member_header )->name );
+		}
+		if( ( *member_header )->comments != NULL )
+		{
+			memory_free(
+			 ( *member_header )->comments );
+		}
 		memory_free(
 		 *member_header );
 
@@ -145,7 +156,8 @@ int libgzipf_member_header_read_data(
      size_t data_size,
      libcerror_error_t **error )
 {
-	static char *function = "libgzipf_member_header_read_data";
+	static char *function   = "libgzipf_member_header_read_data";
+	uint8_t supported_flags = 0x09;
 
 	if( member_header == NULL )
 	{
@@ -215,6 +227,8 @@ int libgzipf_member_header_read_data(
 
 		return( -1 );
 	}
+	member_header->flags = ( (gzipf_member_header_t *) data )->flags;
+
 	byte_stream_copy_to_uint32_little_endian(
 	 ( (gzipf_member_header_t *) data )->modification_time,
 	 member_header->modification_time );
@@ -238,9 +252,9 @@ int libgzipf_member_header_read_data(
 		libcnotify_printf(
 		 "%s: flags\t\t\t\t\t: %" PRIu8 "\n",
 		 function,
-		 ( (gzipf_member_header_t *) data )->flags );
+		 member_header->flags );
 		libgzipf_debug_print_flags(
-		 ( (gzipf_member_header_t *) data )->flags );
+		 member_header->flags );
 		libcnotify_printf(
 		 "\n" );
 
@@ -290,7 +304,200 @@ int libgzipf_member_header_read_data(
 
 		return( -1 );
 	}
+	if( ( member_header->flags & ~( supported_flags ) ) != 0 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_UNSUPPORTED_VALUE,
+		 "%s: unsupported flags: 0x%02" PRIx8 ".",
+		 function,
+		 member_header->flags );
+
+		return( -1 );
+	}
 	return( 1 );
+}
+
+/* Reads the name
+ * Returns 1 if successful or -1 on error
+ */
+int libgzipf_member_header_read_name(
+     libgzipf_member_header_t *member_header,
+     libbfio_handle_t *file_io_handle,
+     libcerror_error_t **error )
+{
+	uint8_t string_data[ 64 ];
+
+	static char *function     = "libgzipf_member_header_read_name";
+	size_t string_data_offset = 0;
+	size_t string_size        = 0;
+	size_t read_size          = 0;
+	ssize_t read_count        = 0;
+	int found_end_of_string   = 0;
+
+	if( member_header == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid member header.",
+		 function );
+
+		return( -1 );
+	}
+	if( member_header->name != NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_VALUE_ALREADY_SET,
+		 "%s: invalid member header - name value already set.",
+		 function );
+
+		return( -1 );
+	}
+	while( found_end_of_string == 0 )
+	{
+		read_count = libbfio_handle_read_buffer(
+		              file_io_handle,
+		              string_data,
+		              64,
+		              error );
+
+		if( read_count <= -1 )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_IO,
+			 LIBCERROR_IO_ERROR_READ_FAILED,
+			 "%s: unable to read member header data.",
+			 function );
+
+			goto on_error;
+		}
+		read_size += (size_t) read_count;
+
+		for( string_data_offset = 0;
+		     string_data_offset < 64;
+		     string_data_offset++ )
+		{
+			string_size++;
+
+			if( string_data[ string_data_offset ] == 0 )
+			{
+				found_end_of_string = 1;
+
+				break;
+			}
+		}
+	}
+	if( libbfio_handle_seek_offset(
+	     file_io_handle,
+	     -read_size,
+	     SEEK_CUR,
+	     error ) == -1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_IO,
+		 LIBCERROR_IO_ERROR_SEEK_FAILED,
+		 "%s: unable to seek start of name.",
+		 function );
+
+		goto on_error;
+	}
+#if defined( HAVE_DEBUG_OUTPUT )
+	if( libcnotify_verbose != 0 )
+	{
+		libcnotify_printf(
+		 "%s: name string size\t\t\t: %" PRIzd "\n",
+		 function,
+		 string_size );
+	}
+#endif
+	if( string_size > (size_t) SSIZE_MAX )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_VALUE_EXCEEDS_MAXIMUM,
+		 "%s: invalid string size value exceeds maximum.",
+		 function );
+
+		return( -1 );
+	}
+	member_header->name = (uint8_t *) memory_allocate(
+	                                   sizeof( uint8_t ) * string_size );
+
+	if( member_header->name == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_MEMORY,
+		 LIBCERROR_MEMORY_ERROR_INSUFFICIENT,
+		 "%s: unable to create name.",
+		 function );
+
+		goto on_error;
+	}
+	member_header->name_size = string_size;
+
+	read_count = libbfio_handle_read_buffer(
+	              file_io_handle,
+	              member_header->name,
+	              string_size,
+	              error );
+
+	if( read_count != (ssize_t) string_size )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_IO,
+		 LIBCERROR_IO_ERROR_READ_FAILED,
+		 "%s: unable to read name.",
+		 function );
+
+		goto on_error;
+	}
+#if defined( HAVE_DEBUG_OUTPUT )
+	if( libcnotify_verbose != 0 )
+	{
+		if( libgzipf_debug_print_string_value(
+		     function,
+		     "name\t\t\t\t\t",
+		     member_header->name,
+		     member_header->name_size,
+		     LIBUNA_CODEPAGE_ISO_8859_1,
+		     error ) != 1 )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+			 LIBCERROR_RUNTIME_ERROR_PRINT_FAILED,
+			 "%s: unable to print string value.",
+			 function );
+
+			goto on_error;
+		}
+		libcnotify_printf(
+		 "\n" );
+	}
+#endif
+	return( 1 );
+
+on_error:
+	if( member_header->name != NULL )
+	{
+		memory_free(
+		 member_header->name );
+
+		member_header->name = NULL;
+	}
+	member_header->name_size = 0;
+
+	return( -1 );
 }
 
 /* Reads the member header
@@ -318,6 +525,17 @@ int libgzipf_member_header_read_file_io_handle(
 
 		return( -1 );
 	}
+	if( member_header->name != NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_VALUE_ALREADY_SET,
+		 "%s: invalid member header - name value already set.",
+		 function );
+
+		return( -1 );
+	}
 #if defined( HAVE_DEBUG_OUTPUT )
 	if( libcnotify_verbose != 0 )
 	{
@@ -330,7 +548,7 @@ int libgzipf_member_header_read_file_io_handle(
 #endif
 	if( libbfio_handle_seek_offset(
 	     file_io_handle,
-	     0,
+	     file_offset,
 	     SEEK_SET,
 	     error ) == -1 )
 	{
@@ -343,7 +561,7 @@ int libgzipf_member_header_read_file_io_handle(
 		 file_offset,
 		 file_offset );
 
-		return( -1 );
+		goto on_error;
 	}
 	read_count = libbfio_handle_read_buffer(
 	              file_io_handle,
@@ -360,7 +578,7 @@ int libgzipf_member_header_read_file_io_handle(
 		 "%s: unable to read member header data.",
 		 function );
 
-		return( -1 );
+		goto on_error;
 	}
 	if( libgzipf_member_header_read_data(
 	     member_header,
@@ -375,8 +593,58 @@ int libgzipf_member_header_read_file_io_handle(
 		 "%s: unable to read member header.",
 		 function );
 
-		return( -1 );
+		goto on_error;
+	}
+	if( ( member_header->flags & 0x04 ) != 0 )
+	{
+/* TODO read 4 bytes and skip extra fields size */
+	}
+	if( ( member_header->flags & 0x08 ) != 0 )
+	{
+		if( libgzipf_member_header_read_name(
+		     member_header,
+		     file_io_handle,
+		     error ) != 1 )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_IO,
+			 LIBCERROR_IO_ERROR_READ_FAILED,
+			 "%s: unable to read name.",
+			 function );
+
+			goto on_error;
+		}
+	}
+	if( ( member_header->flags & 0x10 ) != 0 )
+	{
+/* TODO read comments string */
+	}
+	if( ( member_header->flags & 0x02 ) != 0 )
+	{
+/* TODO read and check checksum */
 	}
 	return( 1 );
+
+on_error:
+	if( member_header->comments != NULL )
+	{
+		memory_free(
+		 member_header->comments );
+
+		member_header->comments = NULL;
+	}
+	member_header->comments_size = 0;
+
+	if( member_header->name != NULL )
+	{
+		memory_free(
+		 member_header->name );
+
+		member_header->name = NULL;
+	}
+	member_header->name_size = 0;
+
+	return( -1 );
 }
 
